# CodeReviewAI

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/endpoints/: review.py
app/endpoints/loggers/: init_logging.py
app/services/: AI_service.py  github_service.py  redis_service.py  utils.py
tests/: test_review.py
