[tool.poetry]
name = "codereviewai"
version = "0.1.0"
description = ""
authors = ["Nik-BZ-22 <bakhamyt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.1"
fastapi = "^0.115.5"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"
redis = "^5.2.0"
google-generativeai = "^0.8.3"
pydantic = "^2.10.2"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
